# TraceCubeSandbox

CubeMaster/: Makefile  conf.yaml  go.mod
CubeMaster/integration/: mock_init.go
CubeMaster/scripts/: redis_key_migrate.sh
CubeProxy/lua/: redis_keys.lua  sandbox_backend.lua
agent/rustjail/: Cargo.toml
agent/rustjail/src/: seccomp.rs
configs/single-node/: cubemaster.yaml
docs/.vitepress/: config.mjs
docs/dev/: index.md  redis-key-spec.md
mydoc/: Agent架构与安全.md  CubeAPI架构与安全.md  CubeMaster架构与安全.md  CubeNet架构与安全.md  CubeProxy架构与安全.md  CubeSandbox安全机制清单.md  CubeShim架构与安全.md  Cubelet架构与安全.md  Network-Agent架构与安全.md
mydoc/security-boundaries/: README.md  T1-cubeapi-ingress.md  T2-operator-trust.md  T4-egress.md
mydoc/security-docs/: 01-cloud-hypervisor-kvm.md  02-isolated-guest-kernel.md  03-vcpu-memory-isolation.md  04-virtio-device-isolation.md  05-iommu-vfio-passthrough.md  06-boot-security-config.md  07-virtio-rate-limiter.md  08-seccomp-three-layers.md  09-linux-capabilities.md  10-cgroups-resource-limiting.md  11-namespaces.md  12-kernel-boot-hardening.md  13-audit.md  14-disabled-kernel-mechanisms.md  15-rootless-unprivileged.md  16-jailer-process-isolation.md  17-snapshot-clone-safety.md  18-network-ebpf-cubevs.md  19-network-cubegress-tproxy.md  20-network-tap-sysctl.md  21-filesystem-overlayfs-virtiofs.md  22-oci-shim-v2.md  23-vsock-host-guest.md  24-no-reaper.md  25-auth-callback.md  26-api-rate-limit.md  27-shared-http-client.md  28-health-endpoint-exempt.md  29-multi-tenant-isolation.md  30-webui-session.md  (+6 more)
web/: tsconfig.tsbuildinfo
(+48 files in other folders)
