[package]
name = "rustjail"
version = "0.1.0"
authors = ["The Kata Containers community <kata-dev@lists.katacontainers.io>"]
edition = "2021"

[dependencies]
serde = "1.0.91"
serde_json = "1.0.39"
serde_derive = "1.0.91"
oci = { path = "../libs/oci" }
cube = { path = "../cube" }
protocols = { path = "../libs/protocols" }
caps = "0.5.0"
nix = "0.23.0"
scopeguard = "1.0.0"
capctl = "0.2.0"
lazy_static = "1.3.0"
libc = "0.2.58"
protobuf = { version = "3.7.2" }
slog = "2.5.2"
slog-scope = "4.1.2"
scan_fmt = "0.2.6"
regex = "1.5.5"
path-absolutize = "1.2.0"
anyhow = "1.0.32"
cgroups = { package = "cgroups-rs", version = "=0.3.3" }
rlimit = "0.5.3"
cfg-if = "0.1.0"

tokio = { version = "=1.45.1", features = ["full"] }
futures = "=0.3.28"
async-trait = "=0.1.68"
inotify = "0.9.2"
libseccomp = { version = "0.3.0", optional = true }

[dev-dependencies]
serial_test = "0.5.0"
tempfile = "3.1.0"

[features]
seccomp = ["libseccomp"]
standard-oci-runtime = []
